<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:scaleType="fitXY"
        android:src="@drawable/item_bg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre2"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicamentoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio2"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicamentoPrecioUnitario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="precio"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_unitario"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicamentoPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="precio"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/medicamentoCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cantidad"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion_envio"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/medicamentoDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="direccion"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>